[package]
name = "custom_timer_and_executor"
version = "0.1.0"
authors = ["Tomasz Kulik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1"
epoll = "4"
timerfd = "1"
log = "0.4"
env_logger = "0.9"
