[package]
name = "dupa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "net", "io-util", "sync", "time"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "client", "tcp", "stream"] }


